Small updates. Added responsive design on the index page

--- a/main.css
+++ b/main.css
@@ -2,6 +2,18 @@ body {
   font-family: "Courier New", Courier, monospace;
 }
 
+h1 {
+  font-size: 28px;
+}
+
+h2 {
+  font-size: 24px;
+}
+
+h3 {
+  font-size: 20px;
+}
+
 .content {
   width: 1024px;
   margin: auto;
@@ -13,4 +25,15 @@ body {
 
 #nav {
   text-align: end;
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    font-family: "Courier New", Courier, monospace;
+  }
+
+  .content {
+    width: 100%;
+    margin: 15px;
+  }
 }
