--- a/main.css
+++ b/main.css
@@ -42,6 +42,17 @@ h3 {
   text-align: end;
 }
 
+.image-description {
+  text-align: center;
+  margin-bottom: 7px;
+  font-style: italic;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
+
 @media only screen and (max-width: 600px) {
   .content {
     width: 100%;
