--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Courier New", Courier, monospace;
+  font-family: "Oswald", "Open Sans", sans-serif;
   line-height: 24px;
   margin: 15px;
 }
