--- a/main.css
+++ b/main.css
@@ -6,14 +6,17 @@ body {
 
 h1 {
   font-size: 28px;
+  line-height: 32px;
 }
 
 h2 {
   font-size: 24px;
+  line-height: 28px;
 }
 
 h3 {
   font-size: 20px;
+  line-height: 22px;
 }
 
 .content {
