--- a/main.css
+++ b/main.css
@@ -1,6 +1,5 @@
 body {
   font-family: "Oswald", "Open Sans", sans-serif;
-  line-height: 24px;
   margin: 15px;
 }
 
@@ -20,8 +19,10 @@ h3 {
 }
 
 .content {
-  width: 700px;
+  width: 575px;
   margin: auto;
+  font-size: 18px;
+  line-height: 24px;
 }
 
 .header {
